now we can add todo-s correctly, for no apparent reason inner text is not showing up, gotta work on it

--- a/styles/style.css
+++ b/styles/style.css
@@ -188,6 +188,8 @@ input[type="text"] {
     display: flex;
     justify-content: space-between;
     padding: 1rem;
+    background-color: var(--dt-clr-500);
+    border-radius: .25rem;
 }
 
 .todo-container--text > *:first-child {
